k8s/codepod/codepod.yml
apiVersion: v1
kind: Pod
metadata:
  name: codepod
  labels:
    app: codepod
spec:
  containers:
  - name: codepod
    image: codepod-prod
    resources:
      limits:
        memory: "500Mi"
        cpu: "1000m"
    ports:
      - containerPort: 5000
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: codepod
spec:
  selector:
    app: codepod
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 5000
