k8s/codepod/codepod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codepod-nginx
  labels:
    name: codepod-nginx
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /ws
        backend:
          service:
            name: codepod
            port: 
              number: 5000
